--- a/languages/de_DE.po
+++ b/languages/de_DE.po
@@ -2,362 +2,403 @@ msgid ""
 msgstr ""
 "Project-Id-Version: _s v1.0-wpcom\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: \n"
-"PO-Revision-Date: 2014-07-12 16:15:56+0000\n"
+"POT-Creation-Date: 2015-04-08 11:35+0100\n"
+"PO-Revision-Date: 2015-04-08 11:44+0100\n"
 "Last-Translator: glueckpress <caspar@glueckpress.com>\n"
 "Language-Team: \n"
+"Language: de_DE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: CSL v1.x\n"
-"X-Poedit-Language: German\n"
-"X-Poedit-Country: GERMANY\n"
+"X-Generator: Poedit 1.7.5\n"
 "X-Poedit-SourceCharset: utf-8\n"
-"X-Poedit-KeywordsList: __;_e;__ngettext:1,2;_n:1,2;__ngettext_noop:1,2;_n_noop:1,2;_c,_nc:4c,1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;_nx_noop:4c,1,2;\n"
+"X-Poedit-KeywordsList: __;_e;__ngettext:1,2;_n:1,2;__ngettext_noop:1,2;_n_noop:1,2;_c,_nc:4c,1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;_nx_noop:4c,1,2\n"
 "X-Poedit-Basepath: ../\n"
-"X-Poedit-Bookmarks: \n"
+"X-Textdomain-Support: yes\n"
 "X-Poedit-SearchPath-0: .\n"
-"X-Textdomain-Support: yes"
 
-#: 404.php:19
-#@ _s
-msgid "It looks like nothing was found at this location. Maybe try one of the links below or a search?"
-msgstr "Scheint, hier ist nichts zu finden. Vielleicht helfen die folgenden Links oder eine Suche?"
-
-#. translators: %1$s: smiley
-#: 404.php:44
-#, php-format
-#@ _s
-msgid "Try looking in the monthly archives. %1$s"
-msgstr "Versuche es mit den Monatsarchiven. %1$s"
-
-#: archive.php:30
-#, php-format
-#@ _s
-msgid "Day: %s"
-msgstr "Tag: %s"
-
-#: archive.php:33
-#, php-format
-#@ _s
-msgid "Month: %s"
-msgstr "Monat: %s"
-
-#: archive.php:36
-#, php-format
-#@ _s
-msgid "Year: %s"
-msgstr "Jahr: %s"
-
-#: archive.php:39
-#@ _s
-msgid "Asides"
-msgstr "Notizen"
-
-#: archive.php:45
-#@ _s
-msgid "Images"
-msgstr "Bilder"
-
-#: archive.php:48
-#@ _s
-msgid "Videos"
-msgstr "Videos"
-
-#: archive.php:51
-#@ _s
-msgid "Quotes"
-msgstr "Zitate"
-
-#: archive.php:54
-#@ _s
-msgid "Links"
-msgstr "Links"
-
-#: archive.php:66
-#@ _s
-msgid "Archives"
-msgstr "Archive"
-
-#: comments.php:64
-#@ _s
-msgid "Comments are closed."
-msgstr "Kommentare geschlossen."
-
-#: content-page.php:18
-#: content-single.php:20
-#: content.php:22
-#@ _s
-msgid "Pages:"
-msgstr "Seiten:"
-
-#: content-none.php:13
-#@ _s
-msgid "Nothing Found"
-msgstr "Nichts gefunden"
-
-#: content-none.php:19
-#, php-format
-#@ _s
-msgid "Ready to publish your first post? <a href=\"%1$s\">Get started here</a>."
-msgstr "<a href=\"%1$s\">Hier</a> kannst du deinen ersten Beitrag veröffentlichen."
-
-#: content-none.php:23
-#@ _s
-msgid "Sorry, but nothing matched your search terms. Please try again with some different keywords."
-msgstr "Leider keine Ergebnisse zu dieser Suche. Bitte versuche es mit anders formulierten Suchbegriffen."
-
-#: header.php:23
-#@ _s
-msgid "Skip to content"
-msgstr "Weiter zum Inhalt"
-
-#: inc/extras.php:63
-#, php-format
-#@ _s
-msgid "Page %s"
-msgstr "Seite %s"
-
-#: content-search.php:50
-#: content.php:52
-#@ _s
-msgid "Leave a comment"
-msgstr "Kommentieren"
-
-#: content-search.php:50
-#: content.php:52
-#@ _s
-msgid "1 Comment"
-msgstr "1 Kommentar"
-
-#: inc/template-tags.php:21
-#@ _s
-msgid "Posts navigation"
-msgstr "Beitragsnavigation"
-
-#: functions.php:45
-#: header.php:32
-#@ _s
-msgid "Primary Menu"
-msgstr "Primäres Menü"
-
-#: functions.php:80
-#@ _s
-msgid "Sidebar"
-msgstr "Sidebar"
-
-#: search.php:16
-#, php-format
-#@ _s
-msgid "Search Results for: %s"
-msgstr "Suchergebnisse für: %s"
-
-#: inc/template-tags.php:52
-#@ _s
-msgid "Post navigation"
-msgstr "Beitragsnavigation"
-
+# @ _s
 #: 404.php:15
-#@ _s
 msgid "Oops! That page can&rsquo;t be found."
 msgstr "Hoppla, Seite nicht gefunden!"
 
+# @ _s
+#: 404.php:19
+msgid "It looks like nothing was found at this location. Maybe try one of the links below or a search?"
+msgstr "Scheint, hier ist nichts zu finden. Vielleicht helfen die folgenden Links oder eine Suche?"
+
+# @ _s
 #: 404.php:27
-#@ _s
 msgid "Most Used Categories"
 msgstr "Meistgenutzte Kategorien"
 
-#: archive.php:27
+# @ _s
+#: 404.php:44
 #, php-format
-#@ _s
-msgid "Author: %s"
-msgstr "Autor: %s"
+msgid "Try looking in the monthly archives. %1$s"
+msgstr "Versuche es mit den Monatsarchiven. %1$s"
 
-#: archive.php:33
-#@ _s
-msgctxt "monthly archives date format"
-msgid "F Y"
-msgstr "F Y"
-
-#: archive.php:36
-#@ _s
-msgctxt "yearly archives date format"
-msgid "Y"
-msgstr "Y"
-
-#: archive.php:42
-#@ _s
-msgid "Galleries"
-msgstr "Galerien"
-
-#: archive.php:57
-#@ _s
-msgid "Statuses"
-msgstr "Status"
-
-#: archive.php:60
-#@ _s
-msgid "Audios"
-msgstr "Audios"
-
-#: archive.php:63
-#@ _s
-msgid "Chats"
-msgstr "Chats"
-
+# @ _s
 #: comments.php:28
 #, php-format
-#@ _s
 msgctxt "comments title"
 msgid "One thought on &ldquo;%2$s&rdquo;"
 msgid_plural "%1$s thoughts on &ldquo;%2$s&rdquo;"
 msgstr[0] "Eine Antwort zu „%2$s“"
 msgstr[1] "%1$s Antworten zu „%2$s“"
 
-#: comments.php:35
-#: comments.php:52
-#@ _s
+# @ _s
+#: comments.php:35 comments.php:56
 msgid "Comment navigation"
 msgstr "Kommentarnavigation"
 
-#: comments.php:36
-#: comments.php:53
-#@ _s
-msgid "&larr; Older Comments"
-msgstr "&larr; Ältere Kommentare"
+#: comments.php:38 comments.php:59
+msgid "Older Comments"
+msgstr "Ältere Kommentare"
 
-#: comments.php:37
-#: comments.php:54
-#@ _s
-msgid "Newer Comments &rarr;"
-msgstr "Neuere Kommentare &rarr;"
+#: comments.php:39 comments.php:60
+msgid "Newer Comments"
+msgstr "Neuere Kommentare"
 
+# @ _s
+#: comments.php:72
+msgid "Comments are closed."
+msgstr "Kommentare geschlossen."
+
+# @ _s
+#: content-none.php:13
+msgid "Nothing Found"
+msgstr "Nichts gefunden"
+
+# @ _s
+#: content-none.php:19
+#, php-format
+msgid "Ready to publish your first post? <a href=\"%1$s\">Get started here</a>."
+msgstr "<a href=\"%1$s\">Hier</a> kannst du deinen ersten Beitrag veröffentlichen."
+
+# @ _s
+#: content-none.php:23
+msgid "Sorry, but nothing matched your search terms. Please try again with some different keywords."
+msgstr "Leider keine Ergebnisse zu dieser Suche. Bitte versuche es mit anders formulierten Suchbegriffen."
+
+# @ _s
 #: content-none.php:28
-#@ _s
 msgid "It seems we can&rsquo;t find what you&rsquo;re looking for. Perhaps searching can help."
 msgstr "Offenbar ist das Gewünschte nicht zu finden. Vielleicht hilft eine Suche?"
 
-#: content-page.php:24
-#: content-search.php:53
-#: content-single.php:60
-#: content.php:55
-#@ _s
+# @ _s
+#: content-page.php:18 content-single.php:20 content.php:29
+msgid "Pages:"
+msgstr "Seiten:"
+
+# @ _s
+#: content-page.php:25 inc/template-tags.php:126
 msgid "Edit"
 msgstr "Bearbeiten"
 
-#. translators: used between list items, there is a space after the comma
-#: content-search.php:30
-#: content-search.php:40
-#: content-single.php:29
-#: content-single.php:32
-#: content.php:32
-#: content.php:42
-#@ _s
-msgid ", "
-msgstr ", "
-
-#: content-search.php:34
-#: content.php:36
+#: content.php:22
 #, php-format
-#@ _s
-msgid "Posted in %1$s"
-msgstr "Veröffentlich unter %1$s"
+msgid "Continue reading %s <span class=\"meta-nav\">&rarr;</span>"
+msgstr "%s weiterlesen <span class=\"meta-nav\">&rarr;</span>"
 
-#: content-search.php:44
-#: content.php:46
-#, php-format
-#@ _s
-msgid "Tagged %1$s"
-msgstr "Verschlagwortet mit %1$s"
-
-#: content-search.php:50
-#: content.php:52
-#@ _s
-msgid "% Comments"
-msgstr "% Kommentare"
-
-#: content-single.php:37
-#, php-format
-#@ _s
-msgid "This entry was tagged %2$s. Bookmark the <a href=\"%3$s\" rel=\"bookmark\">permalink</a>."
-msgstr "Dieser Eintrag ist verschlagwortet mit %2$s. Speichere den <a href=\"%3$s\" rel=\"bookmark\">Permalink</a>."
-
-#: content-single.php:39
-#, php-format
-#@ _s
-msgid "Bookmark the <a href=\"%3$s\" rel=\"bookmark\">permalink</a>."
-msgstr "Speichere den <a href=\"%3$s\" rel=\"bookmark\">Permalink</a>."
-
-#: content-single.php:45
-#, php-format
-#@ _s
-msgid "This entry was posted in %1$s and tagged %2$s. Bookmark the <a href=\"%3$s\" rel=\"bookmark\">permalink</a>."
-msgstr "Dieser Eintrag ist veröffentlicht unter %1$s und verschlagwortet mit %2$s. Speichere den <a href=\"%3$s\" rel=\"bookmark\">Permalink</a>."
-
-#: content-single.php:47
-#, php-format
-#@ _s
-msgid "This entry was posted in %1$s. Bookmark the <a href=\"%3$s\" rel=\"bookmark\">permalink</a>."
-msgstr "Dieser Eintrag ist veröffentlicht unter %1$s. Speichere den <a href=\"%3$s\" rel=\"bookmark\">Permalink</a>."
-
-#: content.php:19
-#@ _s
-msgid "Continue reading <span class=\"meta-nav\">&rarr;</span>"
-msgstr "Weiterlesen <span class=\"meta-nav\">&rarr;</span>"
-
+# @ _s
 #: footer.php:15
-#@ _s
 msgid "http://wordpress.org/"
 msgstr "http://wordpress.org/"
 
+# @ _s
 #: footer.php:15
 #, php-format
-#@ _s
 msgid "Proudly powered by %s"
 msgstr "Mit %s betrieben."
 
+# @ _s
 #: footer.php:17
 #, php-format
-#@ _s
 msgid "Theme: %1$s by %2$s."
 msgstr "Theme: %1$s von %2$s."
 
-#: inc/template-tags.php:25
-#@ _s
-msgid "<span class=\"meta-nav\">&larr;</span> Older posts"
-msgstr "<span class=\"meta-nav\">&larr;</span> Ältere Beiträge"
+# @ _s
+#: functions.php:53 header.php:31
+msgid "Primary Menu"
+msgstr "Primäres Menü"
 
-#: inc/template-tags.php:29
-#@ _s
-msgid "Newer posts <span class=\"meta-nav\">&rarr;</span>"
-msgstr "Neuere Beiträge <span class=\"meta-nav\">&rarr;</span>"
+# @ _s
+#: functions.php:88
+msgid "Sidebar"
+msgstr "Sidebar"
 
-#: inc/template-tags.php:55
+# @ _s
+#: header.php:22
+msgid "Skip to content"
+msgstr "Weiter zum Inhalt"
+
+# @ _s
+#: inc/extras.php:52
 #, php-format
-#@ _s
-msgctxt "Previous post link"
-msgid "<span class=\"meta-nav\">&larr;</span>&nbsp;%title"
-msgstr "<span class=\"meta-nav\">&larr;</span>&nbsp;%title"
+msgid "Page %s"
+msgstr "Seite %s"
 
+# @ _s
+#: inc/template-tags.php:23
+msgid "Posts navigation"
+msgstr "Beitragsnavigation"
+
+#: inc/template-tags.php:27
+msgid "Older posts"
+msgstr "Ältere Beiträge"
+
+#: inc/template-tags.php:31
+msgid "Newer posts"
+msgstr "Neuere Beiträge"
+
+# @ _s
 #: inc/template-tags.php:56
-#, php-format
-#@ _s
-msgctxt "Next post link"
-msgid "%title&nbsp;<span class=\"meta-nav\">&rarr;</span>"
-msgstr "%title&nbsp;<span class=\"meta-nav\">&rarr;</span>"
+msgid "Post navigation"
+msgstr "Beitragsnavigation"
 
-#: inc/template-tags.php:82
+# @ _s
+#: inc/template-tags.php:86
 #, php-format
-#@ _s
 msgctxt "post date"
 msgid "Posted on %s"
 msgstr "Veröffentlicht am %s"
 
-#: inc/template-tags.php:87
+# @ _s
+#: inc/template-tags.php:91
 #, php-format
-#@ _s
 msgctxt "post author"
 msgid "by %s"
 msgstr "von %s"
 
+# @ _s
+#: inc/template-tags.php:108 inc/template-tags.php:114
+msgid ", "
+msgstr ", "
+
+# @ _s
+#: inc/template-tags.php:110
+#, php-format
+msgid "Posted in %1$s"
+msgstr "Veröffentlich unter %1$s"
+
+# @ _s
+#: inc/template-tags.php:116
+#, php-format
+msgid "Tagged %1$s"
+msgstr "Verschlagwortet mit %1$s"
+
+# @ _s
+#: inc/template-tags.php:122
+msgid "Leave a comment"
+msgstr "Kommentieren"
+
+# @ _s
+#: inc/template-tags.php:122
+msgid "1 Comment"
+msgstr "1 Kommentar"
+
+# @ _s
+#: inc/template-tags.php:122
+msgid "% Comments"
+msgstr "% Kommentare"
+
+#: inc/template-tags.php:143
+#, php-format
+msgid "Category: %s"
+msgstr "Kategorie: %s"
+
+#: inc/template-tags.php:145
+#, php-format
+msgid "Tag: %s"
+msgstr "Schlagwort: %s"
+
+# @ _s
+#: inc/template-tags.php:147
+#, php-format
+msgid "Author: %s"
+msgstr "Autor: %s"
+
+# @ _s
+#: inc/template-tags.php:149
+#, php-format
+msgid "Year: %s"
+msgstr "Jahr: %s"
+
+# @ _s
+#: inc/template-tags.php:149
+msgctxt "yearly archives date format"
+msgid "Y"
+msgstr "Y"
+
+# @ _s
+#: inc/template-tags.php:151
+#, php-format
+msgid "Month: %s"
+msgstr "Monat: %s"
+
+# @ _s
+#: inc/template-tags.php:151
+msgctxt "monthly archives date format"
+msgid "F Y"
+msgstr "F Y"
+
+# @ _s
+#: inc/template-tags.php:153
+#, php-format
+msgid "Day: %s"
+msgstr "Tag: %s"
+
+#: inc/template-tags.php:153
+msgctxt "daily archives date format"
+msgid "F j, Y"
+msgstr "j. F Y"
+
+#: inc/template-tags.php:156
+msgctxt "post format archive title"
+msgid "Asides"
+msgstr "Kurzmitteilungen"
+
+#: inc/template-tags.php:158
+msgctxt "post format archive title"
+msgid "Galleries"
+msgstr "Galerien"
+
+#: inc/template-tags.php:160
+msgctxt "post format archive title"
+msgid "Images"
+msgstr "Bilder"
+
+#: inc/template-tags.php:162
+msgctxt "post format archive title"
+msgid "Videos"
+msgstr "Videos"
+
+#: inc/template-tags.php:164
+msgctxt "post format archive title"
+msgid "Quotes"
+msgstr "Zitate"
+
+#: inc/template-tags.php:166
+msgctxt "post format archive title"
+msgid "Links"
+msgstr "Links"
+
+#: inc/template-tags.php:168
+msgctxt "post format archive title"
+msgid "Statuses"
+msgstr "Status"
+
+#: inc/template-tags.php:170
+msgctxt "post format archive title"
+msgid "Audio"
+msgstr "Audio"
+
+#: inc/template-tags.php:172
+msgctxt "post format archive title"
+msgid "Chats"
+msgstr "Chats"
+
+#: inc/template-tags.php:175
+#, php-format
+msgid "Archives: %s"
+msgstr "Archive: %s"
+
+#: inc/template-tags.php:179
+#, php-format
+msgid "%1$s: %2$s"
+msgstr "%1$s: %2$s"
+
+# @ _s
+#: inc/template-tags.php:181
+msgid "Archives"
+msgstr "Archive"
+
+# @ _s
+#: search.php:16
+#, php-format
+msgid "Search Results for: %s"
+msgstr "Suchergebnisse für: %s"
+
+# @ _s
+#~ msgid "Asides"
+#~ msgstr "Notizen"
+
+# @ _s
+#~ msgid "Images"
+#~ msgstr "Bilder"
+
+# @ _s
+#~ msgid "Videos"
+#~ msgstr "Videos"
+
+# @ _s
+#~ msgid "Quotes"
+#~ msgstr "Zitate"
+
+# @ _s
+#~ msgid "Links"
+#~ msgstr "Links"
+
+# @ _s
+#~ msgid "Galleries"
+#~ msgstr "Galerien"
+
+# @ _s
+#~ msgid "Statuses"
+#~ msgstr "Status"
+
+# @ _s
+#~ msgid "Audios"
+#~ msgstr "Audios"
+
+# @ _s
+#~ msgid "Chats"
+#~ msgstr "Chats"
+
+# @ _s
+#~ msgid "&larr; Older Comments"
+#~ msgstr "&larr; Ältere Kommentare"
+
+# @ _s
+#~ msgid "Newer Comments &rarr;"
+#~ msgstr "Neuere Kommentare &rarr;"
+
+# @ _s
+#~ msgid "This entry was tagged %2$s. Bookmark the <a href=\"%3$s\" rel=\"bookmark\">permalink</a>."
+#~ msgstr "Dieser Eintrag ist verschlagwortet mit %2$s. Speichere den <a href=\"%3$s\" rel=\"bookmark\">Permalink</a>."
+
+# @ _s
+#~ msgid "Bookmark the <a href=\"%3$s\" rel=\"bookmark\">permalink</a>."
+#~ msgstr "Speichere den <a href=\"%3$s\" rel=\"bookmark\">Permalink</a>."
+
+# @ _s
+#~ msgid "This entry was posted in %1$s and tagged %2$s. Bookmark the <a href=\"%3$s\" rel=\"bookmark\">permalink</a>."
+#~ msgstr "Dieser Eintrag ist veröffentlicht unter %1$s und verschlagwortet mit %2$s. Speichere den <a href=\"%3$s\" rel=\"bookmark\">Permalink</a>."
+
+# @ _s
+#~ msgid "This entry was posted in %1$s. Bookmark the <a href=\"%3$s\" rel=\"bookmark\">permalink</a>."
+#~ msgstr "Dieser Eintrag ist veröffentlicht unter %1$s. Speichere den <a href=\"%3$s\" rel=\"bookmark\">Permalink</a>."
+
+# @ _s
+#~ msgid "Continue reading <span class=\"meta-nav\">&rarr;</span>"
+#~ msgstr "Weiterlesen <span class=\"meta-nav\">&rarr;</span>"
+
+# @ _s
+#~ msgid "<span class=\"meta-nav\">&larr;</span> Older posts"
+#~ msgstr "<span class=\"meta-nav\">&larr;</span> Ältere Beiträge"
+
+# @ _s
+#~ msgid "Newer posts <span class=\"meta-nav\">&rarr;</span>"
+#~ msgstr "Neuere Beiträge <span class=\"meta-nav\">&rarr;</span>"
+
+# @ _s
+#~ msgctxt "Previous post link"
+#~ msgid "<span class=\"meta-nav\">&larr;</span>&nbsp;%title"
+#~ msgstr "<span class=\"meta-nav\">&larr;</span>&nbsp;%title"
+
+# @ _s
+#~ msgctxt "Next post link"
+#~ msgid "%title&nbsp;<span class=\"meta-nav\">&rarr;</span>"
+#~ msgstr "%title&nbsp;<span class=\"meta-nav\">&rarr;</span>"
